--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo/SL_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="description" content="Steven Le's Personal Portfolio Website. Steven is a Stanford student studying computer science with a focus on software engineering and XR development. He emphasizes user experience through immersion and narrative for every application he designs and develops." />
+    <meta property="og:title" content="Steven Le | Portfolio">
+    <meta property="og:image" content="https://i.imgur.com/XDyjgDS.jpg">
+    <meta property="og:description" content="Steven Le is a Stanford student studying Computer Science with a focus on software engineering and XR development. He emphasizes user experience through immersion and narrative for every application he designs and develops." />
+    <meta property="og:url" content="https://www.stevenlexr.com/">
+    <!-- Twitter Card -->
+    <meta property="twitter:title" content="Steven Le | Portfolio">
+    <meta property="twitter:image" content="https://i.imgur.com/XDyjgDS.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:description" content="Steven Le is a Stanford student studying Computer Science with a focus on software engineering and XR development.">
     <title>Steven Le | Portfolio</title>
   </head>
   <body>
